public/css/style.css
.hero {
  background-image: url("../images/SpaceNerd.jpeg");
  background-size: 100px 100px;
  background-repeat: no-repeat;
  background-position: top left;
  background-color:#32363E !important;
  font-family: "Space Mono", monospace;
  font-weight: 700;
  font-style: normal;
}

/* For the Landing Page */
#main-header {
  font-size: 120px;
  color:white;    
}

#sub-header {
  font-size: 50px;
  color: #7D56B6;
}

.custom-button {
  background-color:#B558A1 !important;
  color:white;
  margin-top: 50px;
}

/* For the Log in Page */

.title {
  font-size: 90px;
}

.input-field {
  background-color:#B6B4AE !important;
}

.log-button {
  background-color: #B558A1!important;
}

.about-button {
  background-color: #7D56B6!important;
  margin-right: 555px !important;
}

.account-button {
  background-color: #5e6bdd !important;
  color: white;  
  margin-left: 500px !important;
}

/* For New Account 
Page */

.create {
  font-size: 70px;
  margin-bottom: 20px;
}

.started-button {
  background-color: #B558A1 !important;
  color: white;  
  margin-top: 55px;
}

/* DashBoard */

body {
  background-color:#32363E !important;
}

.custom-title {
  font-size: 100px;
}

.custom-boxes {
  position: relative;
  padding: 20px;
  background-color:#32363E !important;
  
}
.custom-box {
  position: absolute;
  padding: 10px; 
  background-color:#32363E !important;
}

.custom-box.working-on {
  background-color:#32363E !important;
  top: 10px;
  left: 400px;

}

.custom-box.to-do {
  background-color:#32363E !important;
  top: 180px;
  right: 200px;
}


.custom-box.completed {
  background-color:#32363E !important;
  top: 200px;
} 


.custom-box.total-time-spent {
  top: 350px;
  right: 550px;
}

.working-on p {
  font-size: 70px !important;}

.to-do p {
  font-size: 70px !important; 
}

.completed p {
  font-size: 70px !important; 
}

.total-time-spent p {
  font-size: 30px !important; 
}

.custom-box.working-on *{
  background-color: #64d4e7 !important;
 }

.custom-box.to-do * {
  background-color: #c432e9 !important;
}

.custom-box.completed * {
  background-color: #6cbe65 !important;
}

.custom-box.total-time-spent * {
  background-color: #ec4577 !important;
}

